Prevent user from sending too long message

--- a/static/css/pages/chat.css
+++ b/static/css/pages/chat.css
@@ -57,3 +57,9 @@
 #input-message-area {
     height: 20vh;
 }
+
+#warning-message-area {
+    padding: 1em 1em 3em 1em;
+    height: 1em;
+    text-align: right;
+}
